--- a/tasks/monitoring/zabbix.yml
+++ b/tasks/monitoring/zabbix.yml
@@ -8,6 +8,7 @@
     - common_devices_discovery.py
     - common_block_devices_discovery.py
     - common_dmesg.py
+    - linux_dmesg.py
   tags: ['zabbix-agent', 'zabbix-agent-monitoring']
 
 - name: Install zabbix scripts files
@@ -20,8 +21,8 @@
   with_items:
     - src: block_devices.discovery.py
       dest: linux_block_devices_discovery.py
-    - src: dmesg.py
-      dest: linux_dmesg.py
+    - src: kernel_log.py
+      dest: kernel_log.py
   tags: ['zabbix-agent', 'zabbix-agent-monitoring']
 
 - name: Add userparameters tools
@@ -74,7 +75,7 @@
           comment: discovery for block devices
         - key: linux.kernel_log_errors
           command: >-
-            /usr/bin/env dmesg | {{ zabbix_agent__custom_scripts_directory|d('/opt/zabbix-agent-scripts') }}/linux_dmesg.py
+            /usr/bin/env dmesg | {{ zabbix_agent__custom_scripts_directory|d('/opt/zabbix-agent-scripts') }}/kernel_log.py
             --source-format dmesg
             --var-directory {{ zabbix_agent__var_directory }}
             --filter-older-than 86400
